k8s/flux/clusters/talos-cluster/infra/observe/kubernetes-dashboard/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: http
  namespace: kubernetes-dashboard
spec:
  entryPoints: ["web"]
  routes:
  - match: Host(`k8s-dashboard.homelab.emerconnelly.com`) || Host(`kubernetes-dashboard.homelab.emerconnelly.com`)
    kind: Rule
    middlewares:
    - name: https-redirect
      namespace: traefik
    services:
    - name: noop@internal
      kind: TraefikService
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https
  namespace: kubernetes-dashboard
spec:
  entryPoints: ["websecure"]
  routes:
  - match: Host(`k8s-dashboard.homelab.emerconnelly.com`) || Host(`kubernetes-dashboard.homelab.emerconnelly.com`)
    kind: Rule
    services:
    - name: kubernetes-dashboard-web
      port: 80
      passHostHeader: true
      sticky:
        cookie:
          name: traefik
          secure: true
          httpOnly: true
          sameSite: lax
  tls:
    secretName: ingress-tls
